solved problem where container was overlapping the nav bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,13 @@
 @import 'buttons';
 @import 'users';
 
+
+body {
+  .container {
+    position: static;
+  }
+}
+
 a {
   color: black;
   text-decoration: none;
