--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -9,3 +9,9 @@
     }
   }
 }
+
+.sup-edit {
+  img {
+    margin-bottom: 20px;
+  }
+}
